[gd_scene load_steps=5 format=3 uid="uid://bhxvuw4g6drsr"]

[ext_resource type="Texture2D" uid="uid://dmdbr7nav2qbj" path="res://assets/background.png" id="1_lqnet"]
[ext_resource type="Script" path="res://src/scenes/learning/empty_main.gd" id="1_v66so"]
[ext_resource type="Texture2D" uid="uid://c5cgw5ytit845" path="res://assets/table.png" id="2_nqokd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4rbfq"]
content_margin_top = 16.0
content_margin_bottom = 16.0

[node name="EmptyMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v66so")
info = Array[String](["You're helping a local witch with making tea and supporting the citizens of the town. ", "The goal is to find out what kinds of tea each person likes. ", "Everyone has own preference of tea features, so you'll need to carefully find the best ingredients for everybody. ", "Let's try to make your first tea"])

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lqnet")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="Table" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nqokd")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="Teapot" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -380.0
offset_right = 500.0
offset_bottom = 620.0
grow_horizontal = 2
grow_vertical = 2

[node name="Invitation" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -104.0
offset_right = 85.5
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="LearningLabel" type="Label" parent="Invitation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_styles/normal = SubResource("StyleBoxEmpty_4rbfq")
horizontal_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="Button" parent="Invitation"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Next"

[node name="Finishing" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -104.0
offset_right = 85.5
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="LearningLabel" type="Label" parent="Finishing"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_styles/normal = SubResource("StyleBoxEmpty_4rbfq")
text = "Congratulations, you have made your first tea!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="FinishButton" type="Button" parent="Finishing"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "To main menu"

[connection signal="pressed" from="Invitation/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Finishing/FinishButton" to="." method="_on_finish_button_pressed"]
